[package]
name = "das-types"
version = "1.3.0"
authors = ["Link <link@blockabc.com>"]
edition = "2018"
license = "MIT"

[features]
default = ["no_std"]
std = ["no-std-compat/std"]
no_std = []

[dependencies]
molecule = { version = "=0.6.0", default-features = false }
ckb-std = "=0.7.1"
no-std-compat = { version = "=0.4", features = [ "alloc", "compat_macros" ] }

[dev-dependencies]
hex = "0.4"
