[package]
name = "das-types-std"
version = "1.9.0"
authors = ["Link <link@blockabc.com>"]
edition = "2018"
license = "MIT"

[features]

[dependencies]
# CAREFUL! Leave the specific versions to be decided by ckb-testtool .
molecule = { version = "0.7" }
ckb-types = { version = "0.101" }

[dev-dependencies]
hex = "0.4"
